<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>change_route</class>
 <widget class="QWidget" name="change_route">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>534</width>
    <height>356</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>534</width>
    <height>356</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>534</width>
    <height>356</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">#change_route{image: url(:/new/prefix1/bus.jpg);}</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>40</y>
     <width>191</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>请输入您想要修改的公交路线ID：</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEdit">
   <property name="geometry">
    <rect>
     <x>290</x>
     <y>40</y>
     <width>113</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>70</y>
     <width>151</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>请选择您想要修改的字段：</string>
   </property>
  </widget>
  <widget class="QRadioButton" name="numButton">
   <property name="geometry">
    <rect>
     <x>250</x>
     <y>70</y>
     <width>95</width>
     <height>19</height>
    </rect>
   </property>
   <property name="text">
    <string>公交线路编号</string>
   </property>
  </widget>
  <widget class="QRadioButton" name="startButton">
   <property name="geometry">
    <rect>
     <x>350</x>
     <y>70</y>
     <width>95</width>
     <height>19</height>
    </rect>
   </property>
   <property name="text">
    <string>起始站ID</string>
   </property>
  </widget>
  <widget class="QRadioButton" name="endButton">
   <property name="geometry">
    <rect>
     <x>250</x>
     <y>90</y>
     <width>95</width>
     <height>19</height>
    </rect>
   </property>
   <property name="text">
    <string>终止站ID</string>
   </property>
  </widget>
  <widget class="QRadioButton" name="overButton">
   <property name="geometry">
    <rect>
     <x>350</x>
     <y>90</y>
     <width>95</width>
     <height>19</height>
    </rect>
   </property>
   <property name="text">
    <string>途径站点</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>110</y>
     <width>171</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>请输入您想要修改后的内容：</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="changeEdit">
   <property name="geometry">
    <rect>
     <x>260</x>
     <y>110</y>
     <width>113</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton">
   <property name="geometry">
    <rect>
     <x>230</x>
     <y>200</y>
     <width>75</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(208, 237, 255);</string>
   </property>
   <property name="text">
    <string>修改</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_2">
   <property name="geometry">
    <rect>
     <x>450</x>
     <y>10</y>
     <width>75</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(208, 237, 255);</string>
   </property>
   <property name="text">
    <string>返回</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
